--- a/adminEventBookings.html
+++ b/adminEventBookings.html
@@ -337,7 +337,7 @@
                                                         <p class="para">
                                                             Send a friendly reminder when the event is comming up
                                                         </p>
-                                                        <a href="#">
+                                                        <a href="adminEventReminder.html">
                                                             <button type="button" class="btn btn-success">Edit</button>
                                                         </a>
                                                     </div>
