--- a/adminBlog.html
+++ b/adminBlog.html
@@ -77,7 +77,7 @@
                         <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-nav-bar">
                             <div class="row align-item-center">
                                 <div class="col-md-4">
-                                    <h4 class="text-light text-uppercase mb-0 py-2">Dashboard</h4>
+                                    <h4 class="text-light text-uppercase mb-0 py-2">Blogs</h4>
                                 </div>
                                 <div class="col-md-5">
                                     <form action="">
@@ -136,6 +136,182 @@
                 </div>
             </div>
         </div>
+
+        <!--Main Body-->
+        <main class="blogs">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+
+                        <!--Heading-->
+                        <div class="row pt-md-5 mt-md-5 mb-md-3">
+                            <div class="col-lg-7 col-sm-5 ml-5">
+                                <h1 class="heading-1">The Scolio Talk</h1>
+                            </div>
+                            <div class="col-lg-4 col-sm-3 mt-2 text-right">
+                                <a href="adminAddArticle.html">
+                                    <button type="button" class="btn btn-success">+ Add Article</button>
+                                </a>
+                            </div>
+                        </div>
+                        <hr>
+
+                        <!--Blogs-->
+                        <div class="blog-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Article Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                </div>
+                                <!--Article Details-->
+                                <div class="col-sm-8 d-flex justify-content-between">
+                                    <div>
+                                        <a href="#">
+                                            <h2 class="blogName">Article Name</h2>
+                                        </a>
+                                        <p class="text-muted">  
+                                            <span class="mr-3"><i class="far fa-calendar-alt mr-1">12th May 2020</i></span>
+                                            <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                        </p>
+                                        <p class="text-muted">
+                                            <span class="mr-2"><i class="far fa-comment-alt"></i></span>
+                                            10 Comments
+                                        </p>
+                                    </div>
+                                    <div class="text-right text-secondary mt-5">
+                                        <a href="#">
+                                            <button class="btn btn-success">Details</button>
+                                        </a>
+                                        <a href="#">
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#delete-article">Delete</button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="blog-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Article Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                </div>
+                                <!--Article Details-->
+                                <div class="col-sm-8 d-flex justify-content-between">
+                                    <div>
+                                        <a href="#">
+                                            <h2 class="blogName">Article Name</h2>
+                                        </a>
+                                        <p class="text-muted">  
+                                            <span class="mr-3"><i class="far fa-calendar-alt mr-1">12th May 2020</i></span>
+                                            <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                        </p>
+                                        <p class="text-muted">
+                                            <span class="mr-2"><i class="far fa-comment-alt"></i></span>
+                                            10 Comments
+                                        </p>
+                                    </div>
+                                    <div class="text-right text-secondary mt-5">
+                                        <a href="#">
+                                            <button class="btn btn-success">Details</button>
+                                        </a>
+                                        <a href="#">
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#delete-article">Delete</button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="blog-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Article Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                </div>
+                                <!--Article Details-->
+                                <div class="col-sm-8 d-flex justify-content-between">
+                                    <div>
+                                        <a href="#">
+                                            <h2 class="blogName">Article Name</h2>
+                                        </a>
+                                        <p class="text-muted">  
+                                            <span class="mr-3"><i class="far fa-calendar-alt mr-1">12th May 2020</i></span>
+                                            <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                        </p>
+                                        <p class="text-muted">
+                                            <span class="mr-2"><i class="far fa-comment-alt"></i></span>
+                                            10 Comments
+                                        </p>
+                                    </div>
+                                    <div class="text-right text-secondary mt-5">
+                                        <a href="#">
+                                            <button class="btn btn-success">Details</button>
+                                        </a>
+                                        <a href="#">
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#delete-article">Delete</button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="blog-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Article Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="blog-img" class="img-fluid">
+                                </div>
+                                <!--Article Details-->
+                                <div class="col-sm-8 d-flex justify-content-between">
+                                    <div>
+                                        <a href="#">
+                                            <h2 class="blogName">Article Name</h2>
+                                        </a>
+                                        <p class="text-muted">  
+                                            <span class="mr-3"><i class="far fa-calendar-alt mr-1">12th May 2020</i></span>
+                                            <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                        </p>
+                                        <p class="text-muted">
+                                            <span class="mr-2"><i class="far fa-comment-alt"></i></span>
+                                            10 Comments
+                                        </p>
+                                    </div>
+                                    <div class="text-right text-secondary mt-5">
+                                        <a href="#">
+                                            <button class="btn btn-success">Details</button>
+                                        </a>
+                                        <a href="#">
+                                            <button class="btn btn-success" data-toggle="modal" data-target="#delete-article">Delete</button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Cancel Event Modal-->
+                        <div class="modal fade" id="delete-article">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Delete Article?</h4>
+                                        <button class="close" type="button" data-dismiss="modal">&times;</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are you sure you want to delete the article?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button onclick="" class="btn cancelbtn mr-2">Yes I'm</button>
+                                        <button type="button" class="btn exitbtn" data-dismiss="modal">Cancel</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </main>
 
     </body>
 
