--- a/adminBlog.html
+++ b/adminBlog.html
@@ -55,7 +55,7 @@
                                 <li class="nav-item">
                                     <a href="adminBlog.html" class="nav-link text-white p-3 mb-2 current">
                                         <i class="fas fa-clipboard-list text-light fa-lg mr-3"></i>
-                                        Blog
+                                        The Scolio Talk
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -179,7 +179,7 @@
                                         </p>
                                     </div>
                                     <div class="text-right text-secondary mt-5">
-                                        <a href="#">
+                                        <a href="adminBlogDetails.html">
                                             <button class="btn btn-success">Details</button>
                                         </a>
                                         <a href="#">
@@ -212,7 +212,7 @@
                                         </p>
                                     </div>
                                     <div class="text-right text-secondary mt-5">
-                                        <a href="#">
+                                        <a href="adminBlogDetails.html">
                                             <button class="btn btn-success">Details</button>
                                         </a>
                                         <a href="#">
@@ -245,7 +245,7 @@
                                         </p>
                                     </div>
                                     <div class="text-right text-secondary mt-5">
-                                        <a href="#">
+                                        <a href="adminBlogDetails.html">
                                             <button class="btn btn-success">Details</button>
                                         </a>
                                         <a href="#">
@@ -278,7 +278,7 @@
                                         </p>
                                     </div>
                                     <div class="text-right text-secondary mt-5">
-                                        <a href="#">
+                                        <a href="adminBlogDetails.html">
                                             <button class="btn btn-success">Details</button>
                                         </a>
                                         <a href="#">
