--- a/adminRsvpConfirmation.html
+++ b/adminRsvpConfirmation.html
@@ -55,7 +55,7 @@
                                 <li class="nav-item">
                                     <a href="adminBlog.html" class="nav-link text-white p-3 mb-2 sidebar-link">
                                         <i class="fas fa-clipboard-list text-light fa-lg mr-3"></i>
-                                        Blog
+                                        The Scolio Talk
                                     </a>
                                 </li>
                                 <li class="nav-item">
