--- a/adminBlogDetails.html
+++ b/adminBlogDetails.html
@@ -7,6 +7,7 @@
         <script src="https://kit.fontawesome.com/bd3ff9c68f.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/adminstyle.css">
+        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
         <title>Admin Dashboard</title>
     </head>
 
@@ -204,12 +205,15 @@
                                 </div>
 
                                 <!--Write article-->
-                                <div class="card mt-5 mr-md-5 ml-md-5 mb-3">
+                                <div class="card writeArticle mt-5 mr-md-5 ml-md-5 mb-3">
                                     <h3 class="card-title mt-3 ml-3">Article</h3>
                                     <hr class="mt-2">
-                                    <div class="form-group px-5 mb-5">
-                                        <label for="eventDescription" class="text-muted">Write down your article.</label>
-                                        <textarea id="eventDescription" rows="30" class="form-control" placeholder="Event Description" required></textarea>
+                                    <div class="container-fluid px-4 editor">
+                                        <div id="editor">
+                                            <p>Hello World!</p>
+                                            <p>Some initial <strong>bold</strong> text</p>
+                                            <p><br></p>
+                                          </div>
                                     </div>
                                 </div>
 
@@ -233,5 +237,11 @@
     <script src="js/animation.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/functionality.js"></script>
     <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script>
+        var quill = new Quill('#editor', {
+          theme: 'snow'
+        });
+      </script>
 
 </html>
