--- a/adminBlog.html
+++ b/adminBlog.html
@@ -47,7 +47,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="adminFinances.html" class="nav-link text-white p-3 mb-2 sidebar-link">
+                                    <a href="adminFinancesDonations.html" class="nav-link text-white p-3 mb-2 sidebar-link">
                                         <i class="fas fa-money-bill-alt text-light fa-lg mr-3"></i>
                                         Finances
                                     </a>
@@ -77,7 +77,7 @@
                         <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-nav-bar">
                             <div class="row align-item-center">
                                 <div class="col-md-4">
-                                    <h4 class="text-light text-uppercase mb-0 py-2">Blogs</h4>
+                                    <h4 class="text-light text-uppercase mb-0 py-2">The ScolioTalk</h4>
                                 </div>
                                 <div class="col-md-5">
                                     <form action="">
@@ -146,7 +146,7 @@
                         <!--Heading-->
                         <div class="row pt-md-5 mt-md-5 mb-md-3">
                             <div class="col-lg-7 col-sm-5 ml-5">
-                                <h1 class="heading-1">The Scolio Talk</h1>
+                                <h1 class="heading-1">The ScolioTalk</h1>
                             </div>
                             <div class="col-lg-4 col-sm-3 mt-2 text-right">
                                 <a href="adminAddArticle.html">
