--- a/adminEmailAlerts.html
+++ b/adminEmailAlerts.html
@@ -47,7 +47,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="adminFinances.html" class="nav-link text-white p-3 mb-2 sidebar-link">
+                                    <a href="adminFinancesDonations.html" class="nav-link text-white p-3 mb-2 sidebar-link">
                                         <i class="fas fa-money-bill-alt text-light fa-lg mr-3"></i>
                                         Finances
                                     </a>
