--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -259,7 +259,7 @@
                                             <td>wagatunemwaura@gmail.com</td>
                                             <td>KES 20,000</td>
                                             <td>
-                                                <a href="#">
+                                                <a href="adminMessage.html">
                                                     <button type="button" class="btn btn-success btn-sm">Message</button>
                                                 </a>
                                             </td>
@@ -270,7 +270,7 @@
                                             <td>wagatunemwaura@gmail.com</td>
                                             <td>KES 20,000</td>
                                             <td>
-                                                <a href="#">
+                                                <a href="adminMessage.html">
                                                     <button type="button" class="btn btn-success btn-sm">Message</button>
                                                 </a>
                                             </td>
@@ -281,7 +281,7 @@
                                             <td>wagatunemwaura@gmail.com</td>
                                             <td>KES 20,000</td>
                                             <td>
-                                                <a href="#">
+                                                <a href="adminMessage.html">
                                                     <button type="button" class="btn btn-success btn-sm">Message</button>
                                                 </a>
                                             </td>
@@ -292,7 +292,7 @@
                                             <td>wagatunemwaura@gmail.com</td>
                                             <td>KES 20,000</td>
                                             <td>
-                                                <a href="#">
+                                                <a href="adminMessage.html">
                                                     <button type="button" class="btn btn-success btn-sm">Message</button>
                                                 </a>
                                             </td>
@@ -303,7 +303,7 @@
                                             <td>wagatunemwaura@gmail.com</td>
                                             <td>KES 20,000</td>
                                             <td>
-                                                <a href="#">
+                                                <a href="adminMessage.html">
                                                     <button type="button" class="btn btn-success btn-sm">Message</button>
                                                 </a>
                                             </td>
@@ -494,7 +494,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                
+
 
                                 <div class="container-fluid bg-white event">
                                     <div class="row py-3 mb-2 event-border align-item-center">
