--- a/adminEventBookings.html
+++ b/adminEventBookings.html
@@ -204,7 +204,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -213,7 +215,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -222,7 +226,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -231,7 +237,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -240,7 +248,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -249,7 +259,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -258,7 +270,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -267,7 +281,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -276,7 +292,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -285,7 +303,9 @@
                                                             <td>wagatunemwaura@gmail.com</td>
                                                             <td>0712345678</td>
                                                             <td>
-                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                <a href="adminMessage.html">
+                                                                    <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                                </a>
                                                             </td>
                                                         </tr>
                                                     </tbody>
