--- a/adminFinancesDonations.html
+++ b/adminFinancesDonations.html
@@ -203,7 +203,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -215,7 +215,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -227,7 +227,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -239,7 +239,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -251,7 +251,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -263,7 +263,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -275,7 +275,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -287,7 +287,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -299,7 +299,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
@@ -311,7 +311,7 @@
                                                 <td>wagatunemwaura@gmial.com</td>
                                                 <td>KES 2,500</td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a href="adminMessage.html">
                                                         <button type="button" class="btn btn-success btn-sm">Message</button>
                                                     </a>
                                                 </td>
